      commands on a non-ellipse slice [sotrain515, James]
    * F4 to access the tag debugger in battles no longer worked [Ralph]
    * "rename hero" didn't return false if the player cancelled [Ralph]
    * If an Untargetable enemy was at exactly the same position as a
      targetable one it was possible to target it [Ralph]
    * "swap menu items" swapped the wrong items [Ralph]

  * Stuff Only Developers Will Notice
    * The .pt# 4-bit graphics lumps and .mxs backdrops lump have been replaced
      with a new RELOAD-based rgfx file format [Ralph]

Dec 3 2017 [Etheldreme]

  Highlights:
    * Many new map-editor features, including mouse support.
    * Enemy "appear" animations.
    * Customizable hero experience curve.
    * Textbox save/load/delete/end game conditionals.
    * Unhid still-experimental option for non-320x200 games.
    * Copy-paste text between the editor and other applications.
    * Visual browsers for sprites and many other things.
    * See below for more...

  * New Features
    * You can now browse for sprites, items, and many other properties
      rather than typing in their ID numbers. [James]
    * In the text box condition editor, you can browse for shops [James]
    * Menu bit "Remember selection when reopening" [Ralph]
    * Removed 100% upper limits on attack chain stat % conditions, and
      removed most hero/enemy stat limits
    * Rectangle slices can now optionally use any box border set.
      They are no longer limited to just the box borders defined in
      box styles [James]
    * Battle victory screens can optionally auto-advance after a given
      amount of time [James]
    * Slice editor/debugger improvements:
      * Organised the menu, irrelevant settings hidden
      * Indicate NPC and hero slices, and protected status
      * Press R to reset a slice's position to 0,0 and alignment/anchoring
        to top-left corner
      * Press F7 to hide the 'ants' outline around the selected slice
      [Ralph]